Prevent tables from showing scrollbar needlessly [WEB-1738]

--- a/frontend/scss/molecules/_m-table.scss
+++ b/frontend/scss/molecules/_m-table.scss
@@ -67,7 +67,6 @@ Intended for very simple m-tables..
 
 .m-table table {
   width: 100%;
-  min-width: 500px;
   border-collapse: collapse;
 }
 
